...

    var body: some View {
        if let profile = ProfileManager.shared.getLocalProfile() {
            TabView(selection: $viewModel.selectedTab) {
                HomeAppCoordinator()
                    .tabItem {
                        Label("Home", systemImage: "house")
                    }
                    .tag(0)
                AvailabilityAppCoordinator()
                    .ignoresSafeArea()
                    .tabItem {
                        Label("Availability", systemImage: "figure.run")
...
                    currentUserId: profile.id,
                    authDelegate: coordinator,
                    deepLinkedUserId: $deepLinkedUserId,
                    deepLinkedEventId: $deepLinkedEventId
                )
                .tabItem {
                    Label("Profile", systemImage: "person.fill")
                }
                .tag(3)
                .badge(viewModel.totalNotificationsCount)
            }
            .ignoresSafeArea()
            .onAppear {
...
